--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -5,5 +5,7 @@ COPY requirements.txt ./
 RUN pip install -r requirements.txt
 COPY . .
 
+RUN ./manage.py migrate
+
 EXPOSE 8000
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
